# dphpc-project

./: .gitignore  CMakeLists.txt  Final Presentation.pptx  README.md
docs/: benchmark_results.ods  benchmark_results.txt
docs/media/presentations/: Progress Report.odp  Progress Report.pptx  keep.txt
docs/report/: .gitignore  PRAM.xml  bibl_conf.bib  ppf_pseudo.txt  report.aux  report.bbl  report.blg  report.dvi  report.tex
include/: Algorithms.h  GraphHelper.h  InitialMatching.h  Timer.h  graphloader.h  graphtypes.h  graphutils.h  greedy.h  karpsipser.h  pf.h  pothen_fan.h  ppf1.h  ppf2.h  ppf3.h  ppf4.h  ppf5.h  tree_grafting.h  unsync_pothen_fan.h  verifier.h
plot/data/: amazon0312_ppf3_KS_31.txt  amazon_pf_KS.csv  amazon_run_thinkpad.txt  coPaper.csv  coPaperDBLP_pf_11_TM.txt  coPaperDBLP_ppf3_31_TM.txt  coPaperPartial.txt  coPaper_run_thinkpad.txt  coPaper_tg_pf_31.out  gnutella_ppf3_tg_empty.txt  keep.txt  wikipedia_pf_11.out  wikipedia_ppf3_31.txt  wikipedia_run_thinkpad.txt
plot/data/speedup/: pf_KS_gnutella30.csv  pf_greedy_gnutella30.csv  ppf1.csv  ppf1_KS_gnutella30.csv  ppf1_greedy_gnutella30.csv  ppf1_thru_ppf4_gnutella30.csv  ppf2.csv  ppf2_KS_gnutella30 .csv  ppf2_greedy_gnutella30 .csv  ppf3.csv  ppf3_KS_gnutella30 .csv  ppf3_greedy_gnutella30 .csv  ppf4_KS_gnutella30.csv  ppf4_greedy_gnutella30.csv
plot/data/speedup/coPaper/: coPaperDBLP_pf_Greedy_11_TM.csv  coPaperDBLP_pf_KS_11_TM.csv  plotData.csv
plot/data/speedup/coPaperDBLP/: coPaper_pfGreedy.csv  coPaper_pfKS.csv  coPaper_pf_Greedy_thinkpad.csv  coPaper_pf_KS_thinkpad.csv  coPaper_ppf1Greedy.csv  coPaper_ppf1KS.csv  coPaper_ppf2Greedy.csv  coPaper_ppf2KS.csv  coPaper_ppf3Greedy.csv  coPaper_ppf3KS.csv  coPaper_ptgGreedy.csv  coPaper_ptgKS.csv  plotDatacoPaperDBLP.csv
plot/data/speedup/gnutella30/: ppf1_KS_gnutella30.csv  ppf2_greedy_gnutella30 .csv  ppf4_KS_gnutella30.csv  ppf4_greedy_gnutella30.csv
plot/data/speedup/junk/: parallelPothenFan_gnutella30_2016-11-28_163722.csv  pf_KS_gnutella30.csv  pf_greedy_gnutella30.csv
plot/data/speedup/wikipedia/: plotDatawikipedia.csv  wikipedia_pf_Greedy.csv  wikipedia_pf_KS.csv  wikipedia_ppf3_Greedy.csv  wikipedia_ppf3_KS.csv
plot/output/: keep.txt
plot/scripts/: .plotter.py.swp  .plotter2.py.swp  keep.txt  plotter.py  plotter2.py  scripts.py  test.csv
plot/scripts/.ropeproject/: globalnames
src/: GraphHelper.cpp  InitialMatching.cpp  Timer.cpp  Timer.h  graphloader.cpp  greedy.cpp  karpsipser.cpp  main.cpp  pf.cpp  pothen_fan.cpp  ppf1.cpp  ppf2.cpp  ppf3.cpp  ppf4.cpp  ppf5.cpp  tree_grafting.cpp  unsync_pothen_fan.cpp
test/: parse_and_convert.py  small_graph.txt
test/graphs/: gnutella_bi.txt  parse.py  small_graph_bi.txt  wiki_graph.txt
xeon_phi/: batch.sh  run_benchmark.sh
